#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package pdscalibdata
#------------------------------------------------------------------------

Package author: Andrei Salnikov

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-05-13
2014-05-06 Mikhail S. Dubrovin
- in GlobalMethods.h - get rid of uint for RHEL6

Tag: V00-05-12
2014-05-06 Mikhail S. Dubrovin
- in SvnProps.py (to get rid of nightly complains) move global class attributes under __init__
- add NDArrIOV1 - to save in file / load from file ndarray with metadata and comments
- add test/ex_ndarrio.cpp, test.data - for test NDArrIOV1
- in  GlobalMethods add strTimeStamp(format) and strEnvVar(envVar) methods
	
Tag: V00-05-11
2014-04-29 Mikhail Dubrovin
- GlobalMethods.h - fix doxy documentation

Tag: V00-05-10
2014-04-18 Mikhail Dubrovin
- ALL modules: psvn mktxtprop pdscalibdata/src/*.py - add properties to files
- add src/SvnProps.py
	
Tag: V00-05-09
2014-03-28 Mikhail Dubrovin
- in PnccdCommonModeV1.h change default common mode algorithm number to 2 for pnCCD
	
Tag: V00-05-08
2014-03-06 Mikhail Dubrovin
- in CsPadCommonModeSubV1.cpp
	- correct the list of default parameters introduced by cpo
	- do not consider pixels with any status different form 0 (in the past only status=1 were discarded)
	
Tag: V00-05-07
2014-03-03 Mikhail Dubrovin
- add include/CsPad*V2.h modules for CsPad and CsPad2x2 for types:
	Pedestals, PixelStatus, PixelRms, PixelGain, CommonMode
	
Tag: V00-05-06
2014-02-08 Mikhail Dubrovin
- add class PnccdPixelRmsV1
A         include/PnccdPixelRmsV1.h
A         src/PnccdPixelRmsV1.cpp
	
Tag: V00-05-05
2014-02-07 Mikhail Dubrovin
- in PnccdCommonModeV1 extend CMSize up to 16 parameters
- in include/GlobalMethods.h load_pars_from_file add parameter check_bits

Tag: V00-05-04
2014-02-05 Mikhail Dubrovin
- cosmetic changes in Pnccd* modules
