@@ -11,6 +11,11 @@ Package author: Andrei Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-05-14
+2014-05-15 Mikhail S. Dubrovin
+- NDArrIOV1 - is updated for backward compatability with old format of calib files
+- in test/ex_ndarrio.cpp - add more tests
+
 Tag: V00-05-13
 2014-05-06 Mikhail S. Dubrovin
 - in GlobalMethods.h - get rid of uint for RHEL6
